--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@reduxjs/toolkit": "^1.9.5",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-native": "0.71.7",
+    "react-native-paper": "^5.8.0",
+    "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^5.0.0",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
@@ -33,6 +38,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2"
   },
